--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <groupId>com.github.wu191287278</groupId>
+    <groupId>com.sinotopia</groupId>
     <artifactId>spring-boot-starter-dubbo</artifactId>
     <version>1.5.4</version>
 
-    <name>Spring Boot Dubbo Rpc</name>
-    <description>Spring Boot Dubbo Rpc</description>
+    <name>Spring Boot Dubbo Starter</name>
+    <description>Spring Boot Dubbo Starter</description>
     <url>http://projects.spring.io/spring-boot/</url>
     <modelVersion>4.0.0</modelVersion>
 
@@ -30,8 +30,6 @@
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
     </distributionManagement>
-
-
     <licenses>
         <license>
             <name>The Apache Software License, Version 2.0</name>
@@ -41,18 +39,17 @@
     </licenses>
     <scm>
         <tag>master</tag>
-        <url>git@github.com:wu191287278/spring-boot-starter-dubbo.git</url>
-        <connection>scm:git@github.com:wu191287278/spring-boot-starter-dubbo.git</connection>
-        <developerConnection>scm:git@github.com:wu191287278/spring-boot-starter-dubbo.git</developerConnection>
+        <url>git@github.com:sinotopia/spring-boot-starter-dubbo.git</url>
+        <connection>scm:git@github.com:sinotopia/spring-boot-starter-dubbo.git</connection>
+        <developerConnection>scm:git@github.com:sinotopia/spring-boot-starter-dubbo.git</developerConnection>
     </scm>
     <developers>
         <developer>
-            <name>wuyu191287278</name>
-            <email>191287278@qq.com</email>
-            <organization>WUYU</organization>
+            <name>sinotopia</name>
+            <email>cacotopia@126.com</email>
+            <organization>cacotopia</organization>
         </developer>
     </developers>
-
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -62,7 +59,6 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
@@ -72,9 +68,7 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
     <dependencies>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
@@ -89,54 +83,45 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-zuul</artifactId>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-zipkin</artifactId>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>com.hazelcast</groupId>
             <artifactId>hazelcast</artifactId>
         </dependency>
-
         <!--Feign 支持-->
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-feign</artifactId>
         </dependency>
-
         <dependency>
             <groupId>io.github.openfeign</groupId>
             <artifactId>feign-httpclient</artifactId>
         </dependency>
-
         <dependency>
             <groupId>com.netflix.ribbon</groupId>
             <artifactId>ribbon-transport</artifactId>
             <version>${ribbon.version}</version>
             <optional>true</optional>
         </dependency>
-
-
+        <!--dubbo-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>dubbo</artifactId>
@@ -176,8 +161,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
-        <!--dubbo-->
+        <!--zookeeper -->
         <dependency>
             <groupId>com.github.sgroschupf</groupId>
             <artifactId>zkclient</artifactId>
@@ -193,7 +177,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
         <dependency>
             <groupId>org.apache.zookeeper</groupId>
             <artifactId>zookeeper</artifactId>
@@ -226,8 +209,6 @@
             </exclusions>
         </dependency>
     </dependencies>
-
-
     <build>
         <plugins>
             <plugin>
